// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForecastAlerts matches snapshot with smart reminder disabled 1`] = `
<View
  style={
    {
      "marginBottom": 32,
    }
  }
>
  <Text
    style={
      {
        "color": "#94a3b8",
        "fontSize": 12,
        "fontWeight": "bold",
        "letterSpacing": 1,
        "marginBottom": 12,
        "paddingHorizontal": 24,
        "textTransform": "uppercase",
      }
    }
  >
    Forecast Alerts
  </Text>
  <View
    style={
      {
        "backgroundColor": "#192233",
        "borderColor": "#1e293b",
        "borderRadius": 20,
        "borderWidth": 1,
        "marginHorizontal": 16,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderBottomColor": "#1e293b",
          "borderBottomWidth": 0,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 16,
        }
      }
    >
      <View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 12,
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={24}
            bbWidth={24}
            className="bell-ringing-undefined__svg-icon-phosphor"
            color="#94a3b8"
            fill="currentColor"
            focusable={false}
            height={24}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                [
                  undefined,
                  undefined,
                  {},
                ],
                {
                  "flex": 0,
                  "height": 24,
                  "width": 24,
                },
              ]
            }
            testID="phosphor-react-native-bell-ringing-undefined"
            vbHeight={256}
            vbWidth={256}
            width={24}
          >
            <RNSVGGroup
              fill={
                {
                  "type": 2,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            >
              <RNSVGPath
                d="M224 71.1a8 8 0 0 1-10.78-3.42 94.13 94.13 0 0 0-33.46-36.91 8 8 0 1 1 8.54-13.54 111.46 111.46 0 0 1 39.12 43.09A8 8 0 0 1 224 71.1M35.71 72a8 8 0 0 0 7.1-4.32 94.13 94.13 0 0 1 33.46-36.91 8 8 0 1 0-8.54-13.54 111.46 111.46 0 0 0-39.12 43.09A8 8 0 0 0 35.71 72m186.1 103.94A16 16 0 0 1 208 200h-40.8a40 40 0 0 1-78.4 0H48a16 16 0 0 1-13.79-24.06C43.22 160.39 48 138.28 48 112a80 80 0 0 1 160 0c0 26.27 4.78 48.38 13.81 63.94M150.62 200h-45.24a24 24 0 0 0 45.24 0M208 184c-10.64-18.27-16-42.49-16-72a64 64 0 0 0-128 0c0 29.52-5.38 53.74-16 72Z"
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <Text
            style={
              {
                "color": "white",
                "fontSize": 16,
                "fontWeight": "500",
              }
            }
          >
            Smart Reminder
          </Text>
        </View>
        <Text
          style={
            {
              "color": "#94a3b8",
              "fontSize": 12,
              "marginTop": 4,
              "paddingLeft": 36,
            }
          }
        >
          Based on your activity patterns
        </Text>
      </View>
      <RCTSwitch
        accessibilityRole="switch"
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        onTintColor="#135bec"
        style={
          {
            "alignSelf": "flex-start",
          }
        }
        thumbTintColor="white"
        tintColor="#334155"
        value={false}
      />
    </View>
  </View>
</View>
`;

exports[`ForecastAlerts matches snapshot with smart reminder enabled 1`] = `
<View
  style={
    {
      "marginBottom": 32,
    }
  }
>
  <Text
    style={
      {
        "color": "#94a3b8",
        "fontSize": 12,
        "fontWeight": "bold",
        "letterSpacing": 1,
        "marginBottom": 12,
        "paddingHorizontal": 24,
        "textTransform": "uppercase",
      }
    }
  >
    Forecast Alerts
  </Text>
  <View
    style={
      {
        "backgroundColor": "#192233",
        "borderColor": "#1e293b",
        "borderRadius": 20,
        "borderWidth": 1,
        "marginHorizontal": 16,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderBottomColor": "#1e293b",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 16,
        }
      }
    >
      <View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 12,
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={24}
            bbWidth={24}
            className="bell-ringing-undefined__svg-icon-phosphor"
            color="#94a3b8"
            fill="currentColor"
            focusable={false}
            height={24}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                [
                  undefined,
                  undefined,
                  {},
                ],
                {
                  "flex": 0,
                  "height": 24,
                  "width": 24,
                },
              ]
            }
            testID="phosphor-react-native-bell-ringing-undefined"
            vbHeight={256}
            vbWidth={256}
            width={24}
          >
            <RNSVGGroup
              fill={
                {
                  "type": 2,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            >
              <RNSVGPath
                d="M224 71.1a8 8 0 0 1-10.78-3.42 94.13 94.13 0 0 0-33.46-36.91 8 8 0 1 1 8.54-13.54 111.46 111.46 0 0 1 39.12 43.09A8 8 0 0 1 224 71.1M35.71 72a8 8 0 0 0 7.1-4.32 94.13 94.13 0 0 1 33.46-36.91 8 8 0 1 0-8.54-13.54 111.46 111.46 0 0 0-39.12 43.09A8 8 0 0 0 35.71 72m186.1 103.94A16 16 0 0 1 208 200h-40.8a40 40 0 0 1-78.4 0H48a16 16 0 0 1-13.79-24.06C43.22 160.39 48 138.28 48 112a80 80 0 0 1 160 0c0 26.27 4.78 48.38 13.81 63.94M150.62 200h-45.24a24 24 0 0 0 45.24 0M208 184c-10.64-18.27-16-42.49-16-72a64 64 0 0 0-128 0c0 29.52-5.38 53.74-16 72Z"
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <Text
            style={
              {
                "color": "white",
                "fontSize": 16,
                "fontWeight": "500",
              }
            }
          >
            Smart Reminder
          </Text>
        </View>
        <Text
          style={
            {
              "color": "#94a3b8",
              "fontSize": 12,
              "marginTop": 4,
              "paddingLeft": 36,
            }
          }
        >
          Based on your activity patterns
        </Text>
      </View>
      <RCTSwitch
        accessibilityRole="switch"
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        onTintColor="#135bec"
        style={
          {
            "alignSelf": "flex-start",
          }
        }
        thumbTintColor="white"
        tintColor="#334155"
        value={true}
      />
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "borderBottomColor": "#1e293b",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 16,
        }
      }
    >
      <Text
        style={
          {
            "color": "white",
            "fontSize": 14,
            "fontWeight": "500",
            "paddingLeft": 36,
          }
        }
      >
        Daily Check-in
      </Text>
      <View
        style={
          {
            "backgroundColor": "rgba(0,0,0,0.3)",
            "borderColor": "rgba(255,255,255,0.1)",
            "borderRadius": 8,
            "borderWidth": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 6,
          }
        }
      >
        <Text
          style={
            {
              "color": "white",
              "fontFamily": "Courier",
              "fontWeight": "bold",
            }
          }
        >
          09:00
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "center",
          "padding": 16,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={16}
        bbWidth={16}
        className="paper-plane-right-undefined__svg-icon-phosphor"
        color="#135bec"
        fill="currentColor"
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            [
              undefined,
              undefined,
              {},
            ],
            {
              "flex": 0,
              "height": 16,
              "width": 16,
            },
          ]
        }
        testID="phosphor-react-native-paper-plane-right-undefined"
        vbHeight={256}
        vbWidth={256}
        width={16}
      >
        <RNSVGGroup
          fill={
            {
              "type": 2,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="m231.87 114-168-95.89a16 16 0 0 0-22.95 19.23L71.55 128l-30.63 90.67A16 16 0 0 0 56 240a16.15 16.15 0 0 0 7.93-2.1l167.92-96.05a16 16 0 0 0 .05-27.89ZM56 224a.6.6 0 0 0 0-.12L85.74 136H144a8 8 0 0 0 0-16H85.74L56.06 32.16A.5.5 0 0 0 56 32l168 95.83Z"
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <Text
        style={
          {
            "color": "#135bec",
            "fontWeight": "600",
          }
        }
      >
        Send Test Notification
      </Text>
    </View>
  </View>
</View>
`;
